# directus-to-hugo-mapper

./: Cargo.toml  README.md  input.json  jane-doe.md  john-doe.md  news.mapping.json
src/: cli.rs  config.rs  main.rs  mapper.rs  parser.rs
