[package]
name = "rust-json-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
pico-args = "0.5.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0"
slugify = "0.1.0"
